Add dashboard feature, add reset to styles.scss and set background color to application body

--- a/src/locales/messages.pl.json
+++ b/src/locales/messages.pl.json
@@ -1,4 +1,7 @@
 {
   "locale": "pl",
-  "translations": {}
+  "translations": {
+    "3669409085996211817": " Client's view ",
+    "5880204964336469579": " Shepherd's view "
+  }
 }
