--- a/src/locales/messages.json
+++ b/src/locales/messages.json
@@ -1,7 +1,32 @@
 {
   "locale": "en-US",
   "translations": {
+    "3618165824475952264": "Something went wrong. Try again.",
+    "3894950702316166331": "Loading...",
     "3669409085996211817": " Client's view ",
-    "5880204964336469579": " Shepherd's view "
+    "5880204964336469579": " Shepherd's view ",
+    "4163272119298020373": "Filters",
+    "2314075913167237221": "City",
+    "3617365447777601957": "Oscypek type",
+    "5547664044779916196": "Oscypek size",
+    "6978234364807213493": " Reset Filters ",
+    "2666325195037674788": "Customer:",
+    "8499614752066309224": "City:",
+    "2327303849416740660": "Total amount:",
+    "611729245991331208": "Show details",
+    "1057119163510563812": "No data found.",
+    "4397205751593188256": "Order details:",
+    "7040583849600189879": "Customer details:",
+    "3752674780860571548": "Full name:",
+    "5025457187887640726": "Address:",
+    "1725713924382761715": "Postal code:",
+    "281507927805657954": "Ordered products:",
+    "7658402240953727096": "Name:",
+    "7634975438452127654": "Size:",
+    "2736556170366900089": "Type:",
+    "3848605480008272419": "Amount:",
+    "2160195252594102717": "Price:",
+    "3211077329853455855": "Total price: {$INTERPOLATION} zł",
+    "6606929492607524568": "Back to dashboard"
   }
 }
