Fix i18n translations having spaces or new lines in translated text

--- a/src/locales/messages.json
+++ b/src/locales/messages.json
@@ -32,9 +32,9 @@
     "1861907446407177641": "Extras:",
     "7419412790104674886": "Extra",
     "6806240502693505932": "Total price:",
-    "8624004437446213587": " Save your order\n",
+    "1150949133902961985": "Save your order",
     "3285851337313651466": "Your order has been confirmed.",
-    "8764149133333768817": " Go back to dashboard.\n",
+    "7498765413713885640": "Go back to dashboard",
     "4509656365824831952": "To see the summary, you need to save your order. Saving your order does not mean submitting the order. Don't forget to save your order before submit!",
     "1685738419422973938": "Summary:",
     "3752674780860571548": "Full name:",
@@ -50,12 +50,12 @@
     "281507927805657954": "Ordered products:",
     "6650633628037596693": "Try again",
     "4034400099532898808": "Submit order",
-    "3669409085996211817": " Client's view ",
-    "5880204964336469579": " Shepherd's view ",
+    "4094279485357682696": "Client's view",
+    "5821071220905454614": "Shepherd's view",
     "4420427051099612817": "Filters:",
     "3617365447777601957": "Oscypek type",
     "5547664044779916196": "Oscypek size",
-    "6978234364807213493": " Reset Filters ",
+    "4312517319627808728": "Reset Filters",
     "2666325195037674788": "Customer:",
     "611729245991331208": "Show details",
     "1057119163510563812": "No data found.",
