--- a/src/locales/messages.pl.json
+++ b/src/locales/messages.pl.json
@@ -1,65 +1,65 @@
 {
   "locale": "pl",
   "translations": {
-    "6606929492607524568": "Back to dashboard",
-    "3618165824475952264": "Something went wrong. Try again.",
-    "3894950702316166331": "Loading...",
-    "7131377065256068978": "Small",
-    "5982496808088686844": "Medium",
-    "3905533329051691155": "Large",
-    "3080483882937310852": "Normal",
-    "8606426299433185268": "Smoked",
-    "772778317455563031": "Cranberry sauce",
-    "8217388772672395518": "Garlic pesto",
-    "8953033926734869941": "Name",
-    "2045112409653231798": "Surname",
-    "2314075913167237221": "City",
-    "7450324673386885301": "Postal code",
-    "1847047605496409443": "Street",
-    "2904462051420457381": "House number",
-    "6339545205208195578": "Flat number",
-    "7496435375050672049": "Order:",
-    "6870821845968187834": "Your details:",
-    "7936851719842936546": "Value is too long. Maximum length:",
-    "1417693714872528491": "This field is required.",
-    "9108689373192920286": "Oscypeks:",
+    "6606929492607524568": "Wróć na dashboard",
+    "3618165824475952264": "Coś poszło nie tak. Spróbuj ponownie.",
+    "3894950702316166331": "Ładowanie...",
+    "7131377065256068978": "Mały",
+    "5982496808088686844": "Średni",
+    "3905533329051691155": "Duży",
+    "3080483882937310852": "Normalny",
+    "8606426299433185268": "Wędzony",
+    "772778317455563031": "Sos żurawinowy",
+    "8217388772672395518": "Pesto czosnkowe",
+    "8953033926734869941": "Imię",
+    "2045112409653231798": "Nazwisko",
+    "2314075913167237221": "Miasto",
+    "7450324673386885301": "Kod pocztowy",
+    "1847047605496409443": "Ulica",
+    "2904462051420457381": "Numer domu",
+    "6339545205208195578": "Numer mieszkania",
+    "7496435375050672049": "Złóż zamówienie:",
+    "6870821845968187834": "Twoje dane:",
+    "7936851719842936546": "Wartość pola jest zbyt długa. Maksymalna ilość znaków:",
+    "1417693714872528491": "To pole jest wymagane.",
+    "9108689373192920286": "Oscypki:",
     "7221685811287487581": "Oscypek",
-    "5799798158594850457": "PLN",
-    "8650499415827640724": "Type",
-    "45739481977493163": "Size",
-    "6533918067030990396": "Amount",
-    "3920497170484868386": "Amount has to be a number greater than 0.",
-    "1861907446407177641": "Extras:",
-    "7419412790104674886": "Extra",
-    "6806240502693505932": "Total price:",
-    "1150949133902961985": "Save your order",
-    "3285851337313651466": "Your order has been confirmed.",
-    "7498765413713885640": "Go back to dashboard",
-    "4509656365824831952": "To see the summary, you need to save your order. Saving your order does not mean submitting the order. Don't forget to save your order before submit!",
-    "1685738419422973938": "Summary:",
-    "3752674780860571548": "Full name:",
-    "8499614752066309224": "City:",
-    "5025457187887640726": "Address:",
-    "1725713924382761715": "Postal code:",
-    "2829012512625226280": "Your order:",
-    "7658402240953727096": "Name:",
-    "2736556170366900089": "Type:",
-    "7634975438452127654": "Size:",
-    "3848605480008272419": "Amount:",
-    "2160195252594102717": "Price:",
-    "281507927805657954": "Ordered products:",
-    "6650633628037596693": "Try again",
-    "4034400099532898808": "Submit order",
-    "4094279485357682696": "Client's view",
-    "5821071220905454614": "Shepherd's view",
-    "4420427051099612817": "Filters:",
-    "3617365447777601957": "Oscypek type",
-    "5547664044779916196": "Oscypek size",
-    "4312517319627808728": "Reset Filters",
-    "2666325195037674788": "Customer:",
-    "611729245991331208": "Show details",
-    "1057119163510563812": "No data found.",
-    "4397205751593188256": "Order details:",
-    "7040583849600189879": "Customer details:"
+    "5799798158594850457": "zł",
+    "8650499415827640724": "Rodzaj",
+    "45739481977493163": "Rozmiar",
+    "6533918067030990396": "Ilość",
+    "3920497170484868386": "Ilość musi być liczbą większą od 0.",
+    "1861907446407177641": "Dodatki:",
+    "7419412790104674886": "Dodatek",
+    "6806240502693505932": "Całkowita kwota:",
+    "1150949133902961985": "Zapisz zamówienie",
+    "3285851337313651466": "Twoje zamówienie zostało przyjęte.",
+    "7498765413713885640": "Wróć na dashboard",
+    "4509656365824831952": "Zapisz swoje zamówienie, by zobaczyć podsumowanie poniżej. Zapisanie zamówienia nie oznacza jednak złożenia zamówienia. Nie zapomnij zapisać zamówienia przed jego złożeniem!",
+    "1685738419422973938": "Podsumowanie:",
+    "3752674780860571548": "Imię i nazwisko:",
+    "8499614752066309224": "Miasto:",
+    "5025457187887640726": "Adres:",
+    "1725713924382761715": "Kod pocztowy:",
+    "2829012512625226280": "Twoje zamówienie:",
+    "7658402240953727096": "Nazwa:",
+    "2736556170366900089": "Rodzaj:",
+    "7634975438452127654": "Rozmiar:",
+    "3848605480008272419": "Ilość:",
+    "2160195252594102717": "Cena:",
+    "281507927805657954": "Zamówione produkty:",
+    "6650633628037596693": "Spróbuj ponownie",
+    "4034400099532898808": "Złóż zamówienie",
+    "4094279485357682696": "Widok klienta",
+    "5821071220905454614": "Widok bacy",
+    "4420427051099612817": "Filtry:",
+    "3617365447777601957": "Rodzaj oscypka",
+    "5547664044779916196": "Rozmiar oscypka",
+    "4312517319627808728": "Zresetuj filtry",
+    "2666325195037674788": "Klient:",
+    "611729245991331208": "Pokaż szczegóły",
+    "1057119163510563812": "Brak wyników.",
+    "4397205751593188256": "Szczegóły zamówienia:",
+    "7040583849600189879": "Dane klienta:"
   }
 }
